    (Andrea Floris, Stefano de Gironcoli, E.K.U. Gross, and Matteo Cococcioni,
    Phys. Rev. B 84, 161102(R) (2011);
    Andrea Floris, Iurii Timrov, Burak Himmetoglu, Nicola Marzari, Stefano de Gironcoli,
    and Matteo Cococcioni, in preparation)
  * XDM now works also for USPP and norm-conserving PP

Problems fixed in development version (+ = in qe-6.3-backports as well) :
  + Variable-cell optimization wasn't working with Tkatchenko-Scheffler vdW
  + A few more "make install" and "make -jN" glitches
  + Atomic occupancies for DFT+U were not correctly written by CP after 
    switch to new format, due to a mismatch in their definition
  + Phonons with option "nosym" wasn't working
  + Option "noinv" wasn't read from new xml file
  * Variable-cell optimization with hybrid functionals wasn't working due
    to missing re-initialization (it also crashed during the final scf step)
  + Printout of wall time was sometimes incorrect (courtesy Daniel Pinkal)
  + 'make install' and 'make -j' cases fixed (maybe)
  + The restart option in turboEELS (turbo_eels.x) with ultrasoft
    pseudopotentials was not working.
  + bad format in upf%comment when writing the PP_INFO section of UPF v2 PPs

Incompatible changes in development version:
  * Non-symmorphic operations are always allowed and the FFT grid is made
    commensurate. Meaning and usage of input variable "use_all_frac" changed.
  * Old format (-D__OLDXML) deleted. Everything should work as before but some
    exotic options might have problems. The following utilities no longer work:
    - cppp.x (was reading old format only)
    - importexport.x (use hdf5 for portable data)
    - bgw2pw.x (was writing old format only)
  * Several routines moved from PHonon/PH to LR_Modules
  * Module "wavefunctions_module" renamed "wavefunctions"

Known problems in development version:
  * Frequent "dexx is negative" errors with hybrid functionals

New in 6.3 version: