@@ -35,7 +35,7 @@ PROGRAM phonon
   !
   ! Not implemented in ph.x:
   ! [6] [5] + constraints on the magnetization
-  ! [7] Hubbard U
+  ! [7] Tkatchenko-Scheffler, xdm, DFT-D
   ! [8] Hybrid and meta-GGA functionals
   ! [9] External Electric field
   ! [10] nonperiodic boundary conditions.
