@@ -10,6 +10,8 @@ New in development version:
   * XDM now works also for USPP and norm-conserving PP
 
 Problems fixed in development version (+ = in qe-6.3-backports as well) :
+  + Random MPI crashes with DFT+U due to small discrepancies between values
+    of Hubbard occupancies on different processors
   + Variable-cell optimization wasn't working with Tkatchenko-Scheffler vdW
   + A few more "make install" and "make -jN" glitches
   + Atomic occupancies for DFT+U were not correctly written by CP after 
